--- a/index.html
+++ b/index.html
@@ -1,279 +1,121 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wildlife IRCTC – Explore Nature</title>
-
-  <style>
-    * { box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-
-    body {
-      margin: 0;
-      min-height: 100vh;
-      background:
-        linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-        url('https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover fixed;
-    }
-
-    header {
-      background: rgba(11,61,46,0.9);
-      color: #fff;
-      padding: 18px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header h1 { margin: 0; font-size: 26px; }
-    header span { color: #38ef7d; }
-
-    .container {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 35px;
-      border-radius: 18px;
-      background: rgba(255,255,255,0.92);
-      box-shadow: 0 20px 40px rgba(0,0,0,0.4);
-      animation: fadeIn 0.8s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h2 { text-align: center; color: #0b3d2e; }
-
-    label { font-weight: bold; margin-top: 15px; display: block; }
-
-    input, select {
-      width: 100%;
-      padding: 12px;
-      margin-top: 6px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      font-size: 15px;
-    }
-
-    button {
-      margin-top: 28px;
-      width: 100%;
-      padding: 14px;
-      font-size: 17px;
-      border: none;
-      border-radius: 30px;
-      cursor: pointer;
-      background: linear-gradient(135deg, #11998e, #38ef7d);
-      color: #fff;
-      font-weight: bold;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 25px rgba(56,239,125,0.6);
-    }
-
-    .hidden { display: none; }
-
-    .mode-buttons {
-      display: flex;
-      gap: 25px;
-      margin-top: 35px;
-    }
-
-    .mode-card {
-      flex: 1;
-      padding: 30px;
-      border-radius: 18px;
-      color: #fff;
-      text-align: center;
-      cursor: pointer;
-      font-size: 20px;
-      font-weight: bold;
-      box-shadow: 0 15px 30px rgba(0,0,0,0.35);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .mode-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 25px 40px rgba(0,0,0,0.5);
-    }
-
-    .bus {
-      background:
-        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?auto=format&fit=crop&w=1600&q=80') center/cover;
-    }
-
-    .jeep {
-      background:
-        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url('https://images.unsplash.com/photo-1500534623283-312aade485b7?auto=format&fit=crop&w=1600&q=80') center/cover;
-    }
-
-    .result {
-      margin-top: 25px;
-      padding: 20px;
-      border-radius: 12px;
-      background: #eafff2;
-      border-left: 6px solid #38ef7d;
-      font-size: 16px;
-    }
-
-    footer {
-      text-align: center;
-      color: #fff;
-      padding: 20px;
-      background: rgba(0,0,0,0.5);
-      margin-top: 60px;
-}
-
-/* Page-specific background images */
-.login-bg {
-  background:
-    linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)),
-    url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=1600&q=80') center/cover;
-}
-
-.search-bg {
-  background:
-    linear-gradient(rgba(255,255,255,0.88), rgba(255,255,255,0.88)),
-    url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1600&q=80') center/cover;
-}
-
-.mode-bg {
-  background:
-    linear-gradient(rgba(255,255,255,0.9), rgba(255,255,255,0.9)),
-    url('https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=1600&q=80') center/cover;
-}
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>Wildlife Times</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<header>
-  <h1>Wildlife<span>IRCTC</span></h1>
-  <div>🌿 Book • Travel • Conserve</div>
+<header class="header">
+    <h1>WILDLIFE TIMES</h1>
+    <p>Independent Journalism on Wildlife, Animals & Conservation</p>
 </header>
 
-<!-- LOGIN -->
-<div class="container login-bg" id="loginPage">
-  <div style="display:flex; gap:30px; align-items:center; flex-wrap:wrap;">
-    <div style="flex:1; min-width:260px;">
-      <h2>Login to Continue</h2>
-      <label>Username</label>
-      <input id="username" placeholder="Enter username">
+<nav class="nav">
+    <a href="#">Home</a>
+    <a href="#">Human–Wildlife Interaction</a>
+    <a href="#">Rescue & Incidents</a>
+    <a href="#">Conservation Projects</a>
+    <a href="#">Endangered Species</a>
+    <a href="#">Research & Monitoring</a>
+</nav>
 
-      <label>Password</label>
-      <input type="password" id="password" placeholder="Enter password">
+<div class="container">
 
-      <button onclick="login()">Login</button>
-    </div>
+    <section class="main-news">
 
-    <div style="flex:1; min-width:260px; text-align:center;">
-      <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d?auto=format&fit=crop&w=600&q=80" 
-           alt="Tiger" 
-           style="width:100%; max-width:350px; border-radius:20px; box-shadow:0 20px 40px rgba(0,0,0,0.4);">
-      <p style="margin-top:15px; font-weight:bold; color:#0b3d2e;">
-        Protect • Explore • Experience Wildlife
-      </p>
-    </div>
-  </div>
+        <!-- Wolf -->
+        <article class="news-card">
+            <span class="category">Endangered Species</span>
+            <h2>Endangered Wolf Population Shows Signs of Recovery</h2>
+            <div class="meta">January 9, 2026 | By Wildlife Correspondent | Rajasthan</div>
+            <img src="https://images.unsplash.com/photo-1504208434309-cb69f4fe52b0" alt="Wolf">
+            <p>
+                Conservationists have observed encouraging signs of recovery in the
+                endangered wolf population after years of decline.
+            </p>
+        </article>
+
+        <!-- Deer -->
+        <article class="news-card">
+            <span class="category">Rescue & Incidents</span>
+            <h2>Forest Officials Rescue Injured Deer from Busy City Road</h2>
+            <div class="meta">January 9, 2026 | By Environment Desk | Mysuru</div>
+            <img src="https://plus.unsplash.com/premium_photo-1661819541230-034d07819c9b?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8ZGVlcnxlbnwwfHwwfHx8MA%3D%3D" alt="Deer">
+            <p>
+                An injured deer was rescued after straying onto a busy road,
+                highlighting the increasing overlap between wildlife habitats
+                and urban expansion.
+            </p>
+        </article>
+
+        <!-- Wetland / Project -->
+        <article class="news-card">
+            <span class="category">Conservation Projects</span>
+            <h2>Wetland Restoration Project Launched to Protect Migratory Birds</h2>
+            <div class="meta">January 8, 2026 | By Nivedita Sen | Tamil Nadu</div>
+            <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="Wetland Project">
+            <p>
+                A state-funded wetland restoration initiative aims to improve
+                biodiversity and revive habitats crucial for migratory birds.
+            </p>
+        </article>
+
+        <!-- Leopard -->
+        <article class="news-card">
+            <span class="category">Human–Wildlife Interaction</span>
+            <h2>Leopard Spotted Crossing National Highway at Night</h2>
+            <div class="meta">January 10, 2026 | By Staff Reporter | Maharashtra</div>
+            <img src="https://plus.unsplash.com/premium_photo-1661952443167-05d723e6bb3a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Leopard">
+            <p>
+                A leopard was sighted crossing a national highway late at night,
+                prompting forest officials to issue advisories to motorists.
+            </p>
+        </article>
+
+        <!-- Lion -->
+        <article class="news-card">
+            <span class="category">Research & Monitoring</span>
+            <h2>Camera Trap Study Reveals Increased Wildlife Movement</h2>
+            <div class="meta">January 7, 2026 | By Research Desk | Madhya Pradesh</div>
+            <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d" alt="Lion">
+            <p>
+                A recent camera trap study has revealed increased wildlife movement
+                in protected forest corridors, indicating ecosystem stability.
+            </p>
+        </article>
+
+    </section>
+
+    <!-- Sidebar -->
+    <aside class="sidebar">
+        <h2>Latest Updates</h2>
+
+        <div class="side-news">
+            <img src="https://images.unsplash.com/photo-1587502536263-9298b4a4c7b6" alt="Sea Turtle">
+            <div>
+                <p class="side-title">Sea Turtle Nesting Sites Secured</p>
+                <span class="side-meta">Jan 9, 2026</span>
+            </div>
+        </div>
+
+        <div class="side-news">
+            <img src="https://images.unsplash.com/photo-1444464666168-49d633b86797" alt="Bird">
+            <div>
+                <p class="side-title">Rare Birds Return to Wetlands</p>
+                <span class="side-meta">Jan 8, 2026</span>
+            </div>
+        </div>
+    </aside>
+
 </div>
-</div>
 
-<!-- SEARCH -->
-<div class="container hidden search-bg" id="searchPage">
-  <h2>Plan Your Wildlife Journey</h2>
-
-  <label>Source Location</label>
-  <input placeholder="e.g. Bengaluru">
-
-  <label>Destination Location</label>
-  <input placeholder="e.g. Mysuru">
-
-  <label>Sanctuary / National Park on Route</label>
-  <select>
-    <option>Bandipur National Park</option>
-    <option>Nagarhole National Park</option>
-    <option>Kaziranga National Park</option>
-    <option>Gir Wildlife Sanctuary</option>
-    <option>Jim Corbett National Park</option>
-    <option>Sundarbans National Park</option>
-    <option>Kanha National Park</option>
-  </select>
-
-  <div class="mode-buttons">
-    <div class="mode-card bus" onclick="selectMode('Bus')">🚌 Bus Safari</div>
-    <div class="mode-card jeep" onclick="selectMode('Jeep')">🚙 Jeep Safari</div>
-  </div>
-</div>
-
-<!-- MODE DETAILS -->
-<div class="container hidden mode-bg" id="modePage">
-  <h2 id="modeTitle"></h2>
-
-  <label>Pickup Location</label>
-  <input>
-
-  <label>Drop Location</label>
-  <input>
-
-  <label>Travel Date</label>
-  <input type="date">
-
-  <label>No. of Travelers</label>
-  <input type="number" min="1" max="10" value="1">
-
-  <button onclick="showResult()">Check Availability</button>
-
-  <div class="result hidden" id="resultBox"></div>
-</div>
-
-<footer>
-  © 2026 WildlifeIRCTC | Frontend Demo | Inspired by IRCTC
+<footer class="footer">
+    <p>© 2026 Wildlife Times | Academic Project</p>
 </footer>
-
-<script>
-  function login() {
-    const u = username.value;
-    const p = password.value;
-    if (u && p) {
-      loginPage.classList.add('hidden');
-      searchPage.classList.remove('hidden');
-    } else alert('Please enter credentials');
-  }
-
-  function selectMode(mode) {
-    searchPage.classList.add('hidden');
-    modePage.classList.remove('hidden');
-    modeTitle.innerText = mode + ' Safari Details';
-  }
-
-  function showResult() {
-    resultBox.classList.remove('hidden');
-    resultBox.innerHTML = `
-      <b>Status:</b> Available ✅<br>
-      <b>Estimated Duration:</b> Depends on forest route<br>
-      <b>Important:</b> Wildlife rules & timings strictly apply
-    `;
-  }
-  function showResult() {
-    resultBox.classList.remove('hidden');
-    resultBox.innerHTML = `
-      <b>Status:</b> Available ✅<br>
-      <b>Estimated Duration:</b> Depends on forest route<br>
-      <b>Important:</b> Wildlife rules & timings strictly apply<br><br>
-      <span style="font-size:18px; color:#0b3d2e; font-weight:bold;">
-        Thank you for registering with us 😊
-      </span>
-    `;
-  }
-</script>
 
 </body>
 </html>
-
